# fix_protobuf_imports

./: pyproject.toml
src/fix_protobuf_imports/: fix_protobuf_imports.py
