[project]
name = "fix_protobuf_imports"
version = "0.1.7"
authors = [
    { name = "Markus Wegmann", email = "mw@technokrat.ch"},
    {" name = Noah Hüsser", email = "nh@technokrat.ch"},
]
description = "A script to fix relative imports (from and to nested sub-directories) within compiled `*_pb2.py` Protobuf files."
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click (>=8.1.3 <8.2.0)",
]

[project.urls]
"Homepage" = "https://github.com/technokrat/fix_protobuf_imports"
"Bug Tracker" = "https://github.com/technokrat/fix_protobuf_imports/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fix-protobuf-imports = "fix_protobuf_imports.fix_protobuf_imports:main"
